--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
     
-<h1>HELLO FRIENDS</h1>    
+<h1>HELLO WORLD</h1>    
  <p>THIS IS MY FIRST WEBPAGE </p>   
 <h2>SUMMARY IN THIS CHAPTER </h2>
         <p>HOW TO WRITE USING BRACKETS AND HOW DO THINGS WORK THAT IS THE STURUCTURE OF IT. 
